# takoPi_discord

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  takopi.toml.temp
src/takopi/: __init__.py  config.py  engines.py  plugins.py  settings.py  transports.py
src/takopi/cli/: __init__.py  doctor.py  onboarding_cmd.py  run.py
src/takopi/telegram/: onboarding.py
src/takopi_discord/: __init__.py  backend.py  bridge.py  client.py  file_transfer.py  handlers.py  loop.py  onboarding.py  state.py  voice.py  voice_messages.py
src/takopi_discord/commands/: registration.py
tests/: test_allowlist.py  test_ctx_command.py  test_effective_default_engine.py  test_engine_command_sessions.py  test_file_put.py  test_loop_strip_ctx_lines.py  test_media_group_buffer.py  test_state_store_user_sessions.py  test_voice_messages.py
