[project]
name = "takopi-discord"
authors = [{name = "ayvee"}]
version = "0.5.0"
description = "Discord transport plugin for takopi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.0",
    "httpx>=0.28.1",
    "markdown-it-py",
    "msgspec>=0.20.0",
    "py-cord>=2.6.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pywhispercpp>=1.4.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "sulguk>=0.11.1",
    "tomli-w>=1.2.0",
    "typer>=0.21.0",
    "watchfiles>=0.21.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/asianviking/takopi-discord"
Repository = "https://github.com/asianviking/takopi-discord"
Issues = "https://github.com/asianviking/takopi-discord/issues"

[project.scripts]
takopi-discord = "takopi.cli:main"

[project.entry-points."takopi.engine_backends"]
codex = "takopi.runners.codex:BACKEND"
claude = "takopi.runners.claude:BACKEND"
opencode = "takopi.runners.opencode:BACKEND"
pi = "takopi.runners.pi:BACKEND"

[project.entry-points."takopi.transport_backends"]
discord = "takopi_discord.backend:BACKEND"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi", "src/takopi_discord"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
extend-select = ["B", "BLE001", "C4", "PERF", "SIM", "UP"]
